# ephios-testplugin

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
ephios_testplugin/: __init__.py  notification.py  signals.py  urls.py  views.py
ephios_testplugin/templates/testplugin/: homepage_content.html  test_email_template.html  test_index.html
plugintests/: test_testplugin.py
src/ephios_testplugin/: apps.py  signals.py  urls.py  views.py
src/ephios_testplugin/locale/de/LC_MESSAGES/: django.po
src/ephios_testplugin/templates/testplugin/: homepage_content.html  test_notifications.html
