[tool.poetry]
name = "ephios-testplugin"
version = "1.2.1"
description = "A plugin to test and develop ephios"
authors = ["Felix Rindt <felix@ephios.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.3.0-dev"]
build-backend = "poetry.masonry.api"

[tool.poetry.plugins."ephios.plugins"]
"ephios-testplugin" = "ephios_testplugin.apps.PluginApp"
