[tool.poetry]
name = "ephios-testplugin"
version = "1.3.0"
description = "A plugin to test and develop ephios"
authors = ["Felix Rindt <felix@ephios.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.3.0-dev"]
build-backend = "poetry.masonry.api"

[tool.poetry.plugins."ephios.plugins"]
"ephios-testplugin" = "ephios_testplugin.apps.PluginApp"
